--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "prisma": "^6.4.1",
+    "xss": "^1.0.15",
     "zod": "^3.24.2"
   },
   "devDependencies": {
