--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "test": "jest",
-    "seed": "tsx --transpile-only prisma/seed.ts"
+    "seed": "tsx --transpile-only prisma/seed.ts",
+    "build": "tsc",
+    "start": "node ./dist/src/index.js"
   },
   "dependencies": {
     "@hono/node-server": "^1.13.8",
