cloudinary byrjun, non tested

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,7 @@
 
 DATABASE_URL="postgresql://hop1_owner:npg_aK7zt6bHpEVG@ep-long-art-a9qint96-pooler.gwc.azure.neon.tech/hop1?sslmode=require"
 
+# TODO: cloudinary með public without uploading key 
+CLOUDINARY_CLOUD_NAME=cloudinary nafn
+CLOUDINARY_API_KEY=api key
+CLOUDINARY_API_SECRET=secret cloudinary api 
