--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,14 +2,16 @@
   "compilerOptions": {
     "target": "ESNext",
     "module": "NodeNext",
+    "moduleResolution": "node",
+    "esModuleInterop": true, 
     "strict": true,
-    "verbatimModuleSyntax": true,
+    //"verbatimModuleSyntax": true,
     "skipLibCheck": true,
     "types": [
       "node"
     ],
     "outDir": "dist",
     "jsx": "react-jsx",
-    "jsxImportSource": "hono/jsx",
+    "jsxImportSource": "hono/jsx"
   }
 }
