--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
     "strict": true,
-    //"verbatimModuleSyntax": true,
+    "verbatimModuleSyntax": true,
     "skipLibCheck": true,
     "types": [
       "node"
