--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
     "ts-node": "^10.9.2",
     "tsx": "^4.19.3",
     "typescript-eslint": "^8.26.1"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   }
 }
